examples/test/testpolicy14608.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14608
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key26: value29
      key41: value22
      key46: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value10
          key27: value46
      podSelector:
        matchLabels:
          key41: value17
          key38: value17
          key46: value48
